--- a/index.html
+++ b/index.html
@@ -166,11 +166,13 @@
         <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] bg-gradient-to-r from-pink-200/30 to-purple-200/30 rounded-full blur-[100px] -z-10 animate-breathe"></div>
 
         <div class="space-y-8 max-w-4xl relative z-10 animate-pop-in">
-            <div class="inline-block">
-                <span class="py-2 px-6 rounded-full border border-gray-800/10 bg-white/40 backdrop-blur-sm text-xs md:text-sm font-semibold tracking-[0.2em] uppercase text-gray-600 shadow-sm">
-                    Nuestra Historia
-                </span>
-            </div>
+    <div class="inline-block">
+        <a href="https://rewind.nadiayluis.art" 
+           class="py-4 px-10 rounded-full border border-gray-800/20 bg-white/60 backdrop-blur-md text-sm md:text-lg font-bold tracking-[0.2em] uppercase text-gray-800 shadow-lg hover:scale-105 hover:bg-white hover:shadow-2xl transition-all duration-300 cursor-pointer no-underline block">
+            Ver REWIND 2025
+        </a>
+    </div>
+</div>
             
             <h1 class="font-editorial text-6xl md:text-8xl lg:text-9xl font-medium text-gradient leading-[1.1] tracking-tight">
                 Nadia <span class="text-rose-400 italic font-light">&</span> Luis
