--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                 Hasta nuevo aviso...
             </p>
         </div>
+    <footer class="py-12 text-center border-t border-gray-200/50 bg-white/30 backdrop-blur-sm">
+        <p class="font-editorial text-2xl text-gray-800 mb-2">Nadia & Luis</p>
+        <p class="text-xs text-gray-400 uppercase tracking-widest">Hecho con amor eterno • 2025</p>
+    </footer>
 
     </main>
 
